--- a/public/patterns/03-templates-02-article/03-templates-02-article.html
+++ b/public/patterns/03-templates-02-article/03-templates-02-article.html
@@ -10,7 +10,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1401467818" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1401959099" media="all" />
 		<!--[if lt IE 10]>
 			<style type="text/css">
 				.og-share-post .share-content .image-container{ height: 100px; }
@@ -25,8 +25,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1401467818" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1401467818" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1401959099" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1401959099" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -323,24 +323,17 @@
 		</form>						<ul class="comment-list">
 				<li class="comment-container">
 					<div class="comment-meta">
-		<img src="http://placeimg.com/100/100/people" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Junius Koolen</a></h4>
+		<img src="http://placeimg.com/100/100/nature" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Siguror Hanigan</a></h4>
 					</div>
 					<div class="comment-text">
-						<p>Fizzle crazy tortor. Sed rizzle. Ass pimpin' dolor dapibizzle turpis tempizzle fo shizzle my nizzle. Maurizzle pellentesque its fo rizzle izzle turpis. Get down get down we gonna chung nizzle. Shizzlin dizzle eleifend rhoncizzle break it down. In yo ghetto platea dictumst. Bling bling dapibizzle. Curabitur break yo neck, yall fo, pretizzle eu, go to hizzle dope, own yo' vitae, nunc. Bizzle suscipizzle. Ass semper velit sizzle fo.</p>
+						<p>Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.</p>
 					</div>
 				</li>				<li class="comment-container">
 					<div class="comment-meta">
-		<img src="http://placeimg.com/100/100/people/sepia" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Aquila Achterkamp</a></h4>
+		<img src="http://placeimg.com/100/100/tech/sepia" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Matthias Macguinness</a></h4>
 					</div>
 					<div class="comment-text">
-						<p>Queso caerphilly cheesecake. Parmesan chalk and cheese port-salut port-salut babybel cottage cheese cheesy grin pepper jack. Croque monsieur paneer st. agur blue cheese emmental airedale monterey jack bavarian bergkase cheese triangles. Halloumi parmesan.</p>
-					</div>
-				</li>				<li class="comment-container">
-					<div class="comment-meta">
-		<img src="http://placeimg.com/100/100/people/grayscale" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Frans Keegan</a></h4>
-					</div>
-					<div class="comment-text">
-						<p>Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.</p>
+						<p>Sugar plum wafer soufflé ice cream. Wafer topping biscuit pie gummi bears topping. Gummies toffee powder applicake oat cake cookie. Bear claw candy tootsie roll fruitcake danish applicake candy canes macaroon. Liquorice tiramisu danish cotton candy gummies. Tiramisu dessert gummi bears macaroon sweet roll jelly-o gummi bears marzipan.</p>
 					</div>
 				</li>				<li class="comment-container">
 					<div class="comment-meta">
@@ -351,10 +344,17 @@
 					</div>
 				</li>				<li class="comment-container">
 					<div class="comment-meta">
-		<img src="http://placeimg.com/100/100/nature" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Siguror Hanigan</a></h4>
+		<img src="http://placeimg.com/100/100/animals" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Duane Wilms</a></h4>
 					</div>
 					<div class="comment-text">
-						<p>Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.</p>
+						<p>Fanny pack ullamco et veniam semiotics. Shoreditch PBR reprehenderit cliche, magna Tonx aesthetic. Narwhal photo booth DIY aute post-ironic anim. Vice cliche brunch est before they sold out fap, street art Odd Future fashion axe messenger bag nihil Tonx tattooed. Nihil hashtag incididunt, do eu art party Banksy jean shorts four loko typewriter.</p>
+					</div>
+				</li>				<li class="comment-container">
+					<div class="comment-meta">
+		<img src="http://placeimg.com/100/100/people" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Junius Koolen</a></h4>
+					</div>
+					<div class="comment-text">
+						<p>Fizzle crazy tortor. Sed rizzle. Ass pimpin' dolor dapibizzle turpis tempizzle fo shizzle my nizzle. Maurizzle pellentesque its fo rizzle izzle turpis. Get down get down we gonna chung nizzle. Shizzlin dizzle eleifend rhoncizzle break it down. In yo ghetto platea dictumst. Bling bling dapibizzle. Curabitur break yo neck, yall fo, pretizzle eu, go to hizzle dope, own yo' vitae, nunc. Bizzle suscipizzle. Ass semper velit sizzle fo.</p>
 					</div>
 				</li>						</ul>
 					</div>
@@ -640,10 +640,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1401467818">
+	<script id="pl-js-polyfill-insert-1401959099">
 		(function() {
 			if (self != top) {
-				var cb = '1401467818';
+				var cb = '1401959099';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -652,10 +652,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1401467818">
+	<script id="pl-js-insert-1401959099">
 		(function() {
 			if (self != top) {
-				var cb = '1401467818';
+				var cb = '1401959099';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
