otakantaa bg color added

--- a/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.escaped.html
+++ b/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.escaped.html
@@ -1,4 +1,4 @@
-&lt;div class=&quot;page hankesivu-read-mode&quot; id=&quot;page&quot;&gt;
+&lt;div class=&quot;page otakantaa&quot; id=&quot;page&quot;&gt;
   &lt;!-- Begin .header --&gt;
   &lt;header class=&quot;header cf&quot; role=&quot;banner&quot;&gt;
   	&lt;div class=&quot;element-group&quot;&gt;
