--- a/patterns/03-templates-02-article/03-templates-02-article.html
+++ b/patterns/03-templates-02-article/03-templates-02-article.html
@@ -10,7 +10,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1402296281" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1402306705" media="all" />
 		<!--[if lt IE 10]>
 			<style type="text/css">
 				.og-share-post .share-content .image-container{ height: 100px; }
@@ -25,8 +25,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1402296281" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1402296281" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1402306705" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1402306705" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -330,17 +330,10 @@
 					</div>
 				</li>				<li class="comment-container">
 					<div class="comment-meta">
-		<img src="http://placeimg.com/100/100/any" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Bertil Aaij</a></h4>
+		<img src="http://placeimg.com/100/100/tech" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Teun Richard</a></h4>
 					</div>
 					<div class="comment-text">
-						<p>Especially dogs. Dogs are the best. Every time you come home, they act like they haven't seen you in a year. And the good thing about dogs... is they got different dogs for different people. Like pit bulls. The dog of dogs. Pit bull can be the right man's best friend... or the wrong man's worst enemy. You going to give me a dog for a pet, give me a pit bull.</p>
-					</div>
-				</li>				<li class="comment-container">
-					<div class="comment-meta">
-		<img src="http://placeimg.com/100/100/people/grayscale" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Frans Keegan</a></h4>
-					</div>
-					<div class="comment-text">
-						<p>Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.</p>
+						<p>Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.</p>
 					</div>
 				</li>				<li class="comment-container">
 					<div class="comment-meta">
@@ -355,6 +348,13 @@
 					</div>
 					<div class="comment-text">
 						<p>Beats all you've ever saw, been in trouble with the law since the day they was born. Straight'nin' the curve, flat'nin' the hills. Someday the mountain might get 'em, but the law never will. Makin' their way, the only way they know how, that's just a little bit more than the law will allow. Just good ol' boys, wouldn't change if they could, fightin' the system like a true modern day Robin Hood.</p>
+					</div>
+				</li>				<li class="comment-container">
+					<div class="comment-meta">
+		<img src="http://placeimg.com/100/100/any/grayscale" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Freyr Hines</a></h4>
+					</div>
+					<div class="comment-text">
+						<p>Wufoo diigo grockit sifteo divvyshot, unigo zooomr revver. Edmodo appjet joyent skype bubbli jajah zoodles joukuu xobni hojoki edmodo appjet, mozy mzinga akismet yuntaa joost yuntaa geni tivo insala yoono chumby, grockit sococo loopt zanga etsy cloudera koofers empressr jiglu blippy. Omgpop lanyrd joukuu sococo zimbra airbnb movity jibjab, foodzie.</p>
 					</div>
 				</li>						</ul>
 					</div>
@@ -640,10 +640,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1402296281">
+	<script id="pl-js-polyfill-insert-1402306705">
 		(function() {
 			if (self != top) {
-				var cb = '1402296281';
+				var cb = '1402306705';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -652,10 +652,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1402296281">
+	<script id="pl-js-insert-1402306705">
 		(function() {
 			if (self != top) {
-				var cb = '1402296281';
+				var cb = '1402306705';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
