Fixed several issues

--- a/patterns/01-molecules-06-components-08-loggedin-lifts/01-molecules-06-components-08-loggedin-lifts.escaped.html
+++ b/patterns/01-molecules-06-components-08-loggedin-lifts/01-molecules-06-components-08-loggedin-lifts.escaped.html
@@ -1,4 +1,4 @@
-﻿&lt;div id=&quot;pnlFollowedProjects&quot; class=&quot;content-item large&quot;&gt;
+&lt;div id=&quot;pnlFollowedProjects&quot; class=&quot;content-item large&quot;&gt;
     &lt;h3 class=&quot;section-title&quot;&gt;Seuraamani kohteet
     &lt;/h3&gt;
     &lt;div class=&quot;list-lift&quot;&gt;
