--- a/patterns/04-pages-00-homepage-loggedin/04-pages-00-homepage-loggedin.escaped.html
+++ b/patterns/04-pages-00-homepage-loggedin/04-pages-00-homepage-loggedin.escaped.html
@@ -192,7 +192,7 @@
           	&lt;/div&gt;
           &lt;/section&gt;      &lt;section class=&quot;l-two-col&quot;&gt;
           &lt;section class=&quot;l-main&quot;&gt;
-                ﻿&lt;div id=&quot;pnlFollowedProjects&quot; class=&quot;content-item large&quot;&gt;
+                &lt;div id=&quot;pnlFollowedProjects&quot; class=&quot;content-item large&quot;&gt;
                     &lt;h3 class=&quot;section-title&quot;&gt;Seuraamani kohteet
                     &lt;/h3&gt;
                     &lt;div class=&quot;list-lift&quot;&gt;
