--- a/patterns/01-molecules-06-components-07-anonymous-lifts/01-molecules-06-components-07-anonymous-lifts.html
+++ b/patterns/01-molecules-06-components-07-anonymous-lifts/01-molecules-06-components-07-anonymous-lifts.html
@@ -10,7 +10,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1402297095" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1402309571" media="all" />
 		<!--[if lt IE 10]>
 			<style type="text/css">
 				.og-share-post .share-content .image-container{ height: 100px; }
@@ -25,8 +25,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1402297095" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1402297095" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1402309571" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1402309571" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -34,215 +34,214 @@
 	</head>
 
 	<body class="body">
-﻿<div id="pnlFollowedProjects" class="content-item large">
-    <h3 class="section-title">Vielä ehdit vaikuttaa!
-    </h3>
-    <div class="list-lift">
-        <div class="content-list">
-            <ul>
-                <li class="single-list-item">
-                    <ul class="items-container">
-                        <!--<li class="block-item">
-                    <div class="lad">
-                        <a href="#">Lorem ipsum</a>
-                        <p class="description">test</p>
-                    </div>
-                    </li>-->
-                        <li class="block-item">
-                            <div class="count-container">
-                                <span class="icon-span icon-comment"></span>
-                                <a href="//www.foo.bar">0</a>
-                            </div>
-                        </li>
-                        <li class="block-item">
-                            <div class="lad">
-                                <a href="#">Lorem ipsum hanke</a>
-                                <p class="description">
-                                    <a href="#">LoremIpsumChat</a> chatissa on vielä tilaa.
-                                </p>
-                            </div>
-                        </li>
-                    </ul>
-                </li>
-                <li class="single-list-item">
-                    <ul class="items-container">
-                        <!--<li class="block-item">
-                    <div class="lad">
-                        <a href="#">Lorem ipsum</a>
-                        <p class="description">test</p>
-                    </div>
-                    </li>-->
-                        <li class="block-item">
-                            <div class="count-container">
-                                <span class="icon-span icon-comment"></span>
-                                <a href="//www.foo.bar">22</a>
-                            </div>
-                        </li>
-                        <li class="block-item">
-                            <div class="lad">
-                                <a href="#">Lorem ipsum hanke</a>
-                                <p class="description">
-                                    22 henkilöä on osallistunut chattiin <a href="#">Lorem lipsum chat#2</a>
-                                </p>
-                            </div>
-                        </li>
-                    </ul>
-                </li>
-                <li class="single-list-item">
-                    <ul class="items-container">
-                        <!--<li class="block-item">
-                    <div class="lad">
-                        <a href="#">Lorem ipsum</a>
-                        <p class="description">test</p>
-                    </div>
-                    </li>-->
-                        <li class="block-item">
-                            <div class="count-container">
-                                <span class="icon-span icon-comment"></span>
-                                <a href="//www.foo.bar">48</a>
-                            </div>
-                        </li>
-                        <li class="block-item">
-                            <div class="lad">
-                                <a href="#">Lorem lipsum hanke#3</a>
-                                <p class="description">
-                                    48 henkilöä on osallistui chattiin <a href="#">Lorem lipsum chat#3</a>
-                                </p>
-                            </div>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-        <p class="read-more">
-            <a href="#">Näytä lisää</a>
-        </p>
-    </div>
+<div id="pnlFollowedProjects" class="content-item large">
+	<h3 class="section-title">Vielä ehdit vaikuttaa!</h3>
+	<div class="list-lift">
+		<div class="content-list">
+			<ul>
+				<li class="single-list-item">
+					<ul class="items-container">
+						<!--<li class="block-item">
+					<div class="lad">
+						<a href="#">Lorem ipsum</a>
+						<p class="description">test</p>
+					</div>
+					</li>-->
+						<li class="block-item">
+							<div class="count-container">
+								<span class="icon-span icon-comment"></span>
+								<a href="//www.foo.bar">0</a>
+							</div>
+						</li>
+						<li class="block-item">
+							<div class="lad">
+								<a href="#">Lorem ipsum hanke</a>
+								<p class="description">
+									<a href="#">LoremIpsumChat</a> chatissa on vielä tilaa.
+								</p>
+							</div>
+						</li>
+					</ul>
+				</li>
+				<li class="single-list-item">
+					<ul class="items-container">
+						<!--<li class="block-item">
+					<div class="lad">
+						<a href="#">Lorem ipsum</a>
+						<p class="description">test</p>
+					</div>
+					</li>-->
+						<li class="block-item">
+							<div class="count-container">
+								<span class="icon-span icon-comment"></span>
+								<a href="//www.foo.bar">22</a>
+							</div>
+						</li>
+						<li class="block-item">
+							<div class="lad">
+								<a href="#">Lorem ipsum hanke</a>
+								<p class="description">
+									22 henkilöä on osallistunut chattiin <a href="#">Lorem lipsum chat#2</a>
+								</p>
+							</div>
+						</li>
+					</ul>
+				</li>
+				<li class="single-list-item">
+					<ul class="items-container">
+						<!--<li class="block-item">
+					<div class="lad">
+						<a href="#">Lorem ipsum</a>
+						<p class="description">test</p>
+					</div>
+					</li>-->
+						<li class="block-item">
+							<div class="count-container">
+								<span class="icon-span icon-comment"></span>
+								<a href="//www.foo.bar">48</a>
+							</div>
+						</li>
+						<li class="block-item">
+							<div class="lad">
+								<a href="#">Lorem lipsum hanke#3</a>
+								<p class="description">
+									48 henkilöä on osallistui chattiin <a href="#">Lorem lipsum chat#3</a>
+								</p>
+							</div>
+						</li>
+					</ul>
+				</li>
+			</ul>
+		</div>
+		<p class="read-more">
+			<a href="#">Näytä lisää</a>
+		</p>
+	</div>
 </div>
 <div id="pnlInterestingProjects" class="content-item large">
-    <h3 class="section-title">Suosittuja hankkeita
-    </h3>
-    <div class="list-lift">
-        <div class="content-list">
-            <ul>
-                <li class="single-list-item">
-                    <ul class="items-container">
-                        <li class="block-item">
-                            <div class="lad">
-                                <a href="#">Toinen Lorem ipsum hanke</a>
-                                <p class="description">Lorem ipsum kuvausta tähän</p>
-                            </div>
-                        </li>
-                    </ul>
-                </li>
-                <li class="single-list-item">
-                    <ul class="items-container">
-                        <li class="block-item">
-                            <div class="lad">
-                                <a href="#">Kolmas Lorem ipsum hanke</a>
-                                <p class="description">Lorem ipsum kuvausta tähän</p>
-                            </div>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <p class="read-more">
-        <a href="#">Näytä kaikki hankkeet</a>
-    </p>
+	<h3 class="section-title">Suosittuja hankkeita
+	</h3>
+	<div class="list-lift">
+		<div class="content-list">
+			<ul>
+				<li class="single-list-item">
+					<ul class="items-container">
+						<li class="block-item">
+							<div class="lad">
+								<a href="#">Toinen Lorem ipsum hanke</a>
+								<p class="description">Lorem ipsum kuvausta tähän</p>
+							</div>
+						</li>
+					</ul>
+				</li>
+				<li class="single-list-item">
+					<ul class="items-container">
+						<li class="block-item">
+							<div class="lad">
+								<a href="#">Kolmas Lorem ipsum hanke</a>
+								<p class="description">Lorem ipsum kuvausta tähän</p>
+							</div>
+						</li>
+					</ul>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<p class="read-more">
+		<a href="#">Näytä kaikki hankkeet</a>
+	</p>
 </div>
 <!--<section class="content-item large">
-    <div class="">
-        <h3 class="section-title">Vielä ehdit vaikuttaa!</h3>
-    </div>
-    <div class="">
-        <div class="list-item">
-            <div class="list-title">
-                <a id="Main_lvClosingActions_hlNaviLink_0" href="#">Lorem ipsum hanke #1</a>
-            </div>
-            <div class="list-content">
-                Keskustelu
-                "Lorem ipsum keskustelu"
-                käynnissä päättyy 23.6.2014
-                <div class="list-status">
-                    Tilanne nyt:
-                        3 keskusteluketjua, 6 viestiä, viimeisin viesti 16.11.2013 1:21
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="">
-        <div class="list-item">
-            <div class="list-title">
-                <a id="Main_lvClosingActions_hlNaviLink_1" href="#">Lorem ipsum hanke #2</a>
-            </div>
-            <div class="list-content">
-                Kirjoittaminen
-                "Lorem ipsum kirjoittaminen"
-                käynnissä päättyy 31.12.2014
-                <div class="list-status">
-                    Tilanne nyt:
-                        Yksi versio, luotu 10.10.2013 12:12
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="">
-        <div class="list-item">
-            <div class="list-title">
-                <a id="Main_lvClosingActions_hlNaviLink_2" href="#">Lorem ipsum hanke #3</a>
-            </div>
-            <div class="list-content">
-                Keskustelu
-                "Lorem ipsum keskustelu"
-                käynnissä päättyy 31.12.2014
-                <div class="list-status">
-                    Tilanne nyt:
-                        1 keskusteluketjua, 1 viestiä, viimeisin viesti 29.10.2013 16:53
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="">
-        <div class="list-item">
-            <div class="list-title">
-                <a id="Main_lvClosingActions_hlNaviLink_3" href="#">Lorem ipsum hanke #4</a>
-            </div>
-            <div class="list-content">
-                Keskustelu
-                "Lorem ipsum keskustelu"
-                käynnissä päättyy 1.4.2015
-                <div class="list-status">
-                    Tilanne nyt:
-                        0 keskusteluketjua
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="">
-        <div class="list-item">
-            <div class="list-title">
-                <a id="Main_lvClosingActions_hlNaviLink_4" href="#">Lorem ipsum hanke #4</a>
-            </div>
-            <div class="list-content">
-                Keskustelu
-                "Lorem ipsum keskustelu"
-                käynnissä päättyy 31.12.2016
-                <div class="list-status">
-                    Tilanne nyt:
-                        1 keskusteluketjua, 1 viestiä, viimeisin viesti 16.4.2013 21:13
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="">
-        <div class="list-item">
-            <div class="list-title list-showall">
-                <a id="Main_hlShowAll" href="#">Näytä kaikki hankkeet ۼ/a>
-            </div>
-        </div>
-    </div>
+	<div class="">
+		<h3 class="section-title">Vielä ehdit vaikuttaa!</h3>
+	</div>
+	<div class="">
+		<div class="list-item">
+			<div class="list-title">
+				<a id="Main_lvClosingActions_hlNaviLink_0" href="#">Lorem ipsum hanke #1</a>
+			</div>
+			<div class="list-content">
+				Keskustelu
+				"Lorem ipsum keskustelu"
+				käynnissä päättyy 23.6.2014
+				<div class="list-status">
+					Tilanne nyt:
+						3 keskusteluketjua, 6 viestiä, viimeisin viesti 16.11.2013 1:21
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="">
+		<div class="list-item">
+			<div class="list-title">
+				<a id="Main_lvClosingActions_hlNaviLink_1" href="#">Lorem ipsum hanke #2</a>
+			</div>
+			<div class="list-content">
+				Kirjoittaminen
+				"Lorem ipsum kirjoittaminen"
+				käynnissä päättyy 31.12.2014
+				<div class="list-status">
+					Tilanne nyt:
+						Yksi versio, luotu 10.10.2013 12:12
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="">
+		<div class="list-item">
+			<div class="list-title">
+				<a id="Main_lvClosingActions_hlNaviLink_2" href="#">Lorem ipsum hanke #3</a>
+			</div>
+			<div class="list-content">
+				Keskustelu
+				"Lorem ipsum keskustelu"
+				käynnissä päättyy 31.12.2014
+				<div class="list-status">
+					Tilanne nyt:
+						1 keskusteluketjua, 1 viestiä, viimeisin viesti 29.10.2013 16:53
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="">
+		<div class="list-item">
+			<div class="list-title">
+				<a id="Main_lvClosingActions_hlNaviLink_3" href="#">Lorem ipsum hanke #4</a>
+			</div>
+			<div class="list-content">
+				Keskustelu
+				"Lorem ipsum keskustelu"
+				käynnissä päättyy 1.4.2015
+				<div class="list-status">
+					Tilanne nyt:
+						0 keskusteluketjua
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="">
+		<div class="list-item">
+			<div class="list-title">
+				<a id="Main_lvClosingActions_hlNaviLink_4" href="#">Lorem ipsum hanke #4</a>
+			</div>
+			<div class="list-content">
+				Keskustelu
+				"Lorem ipsum keskustelu"
+				käynnissä päättyy 31.12.2016
+				<div class="list-status">
+					Tilanne nyt:
+						1 keskusteluketjua, 1 viestiä, viimeisin viesti 16.4.2013 21:13
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="">
+		<div class="list-item">
+			<div class="list-title list-showall">
+				<a id="Main_hlShowAll" href="#">Näytä kaikki hankkeet ۼ/a>
+			</div>
+		</div>
+	</div>
 </section>-->
 	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
@@ -292,10 +291,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1402297095">
+	<script id="pl-js-polyfill-insert-1402309571">
 		(function() {
 			if (self != top) {
-				var cb = '1402297095';
+				var cb = '1402309571';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -304,10 +303,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1402297095">
+	<script id="pl-js-insert-1402309571">
 		(function() {
 			if (self != top) {
-				var cb = '1402297095';
+				var cb = '1402309571';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
